<resources>
    <string name="app_name">Password Manager</string>
    <string name="nav_header_title">Password Manager</string>
    <string name="nav_header_subtitle">nemo.xun.jin.wang@gmail.com</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    
    <string name="menu_home">Home</string>
    <string name="menu_pass_generator">Password Generator</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="multiSelectDemo">
        <item>Select 1</item>
        <item>Select 2</item>
        <item>Select 3</item>
        <item>Select 4</item>
        <item>Select 5</item>
    </string-array>

    <!--    setTheme(R.style.Theme_PasswordManager_NoActionBar);-->
    <!--    setTheme(R.style.Theme_Red_700_900_NoActionBar);-->
    <!--    setTheme(R.style.Theme_Purple_700_900_NoActionBar);-->
    <!--    setTheme(R.style.Theme_Indigo_700_900_NoActionBar);-->
    <!--    setTheme(R.style.Theme_Green_700_900_NoActionBar);-->

    <string-array name="multiSelectDemoDft">
        <item>Select 1</item>
        <item>Select 3</item>
        <item>Select 5</item>
    </string-array>

    <string name="menu_setting">Setting</string>
    <string name="pass_with_symbbols"><![CDATA[Contain !\";#$%&\'()*+,-./:;<=>?@[]^_`{|}~]]></string>
    <string name="pass_without_symbbols"><![CDATA[No !\";#$%&\'()*+,-./:;<=>?@[]^_`{|}~]]></string>
    <string name="pass_similiar">"No characters like i, l, 1, L, o, 0, O, etc. "</string>
    <string name="generate_new_password">Generate New Password</string>
    <string name="textview">Password Length</string>
    <string name="generate">Generate</string>
    <string name="copy">Copy</string>

    <integer-array name="pass_length_integer">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </integer-array>

    <string-array name="pass_length">
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
        <item>101</item>
        <item>102</item>
        <item>103</item>
        <item>104</item>
        <item>105</item>
        <item>106</item>
        <item>107</item>
        <item>108</item>
        <item>109</item>
        <item>110</item>
        <item>111</item>
        <item>112</item>
        <item>113</item>
        <item>114</item>
        <item>115</item>
        <item>116</item>
        <item>117</item>
        <item>118</item>
        <item>119</item>
        <item>120</item>
        <item>121</item>
        <item>122</item>
        <item>123</item>
        <item>124</item>
        <item>125</item>
        <item>126</item>
        <item>127</item>
        <item>128</item>
        <item>256</item>
        <item>512</item>
        <item>1024</item>
        <item>2048</item>
    </string-array>

    <string name="a_u_sure">Are You Sure?</string>
    <string name="title_edit">Edit Your Account</string>
    <string name="input_account">Input Your Account</string>
    <string name="reset_password">Set new password?</string>
    <string name="theme_selection">Theme Selection</string>
    <string name="theme_list">Theme List</string>
    <string name="encrypt_list">Encryption Methods</string>
    <string name="inc_num">Include Numbers</string>
    <string name="inc_lower">Include Lowercase Characters</string>
    <string name="inc_upper">Include Uppercase Characters</string>
    <string name="letter_begin">Begin With A Letter</string>
    <string name="no_duplicate">No Duplicate Characters</string>
    <string name="no_sequential">No Sequential Characters</string>
    <string name="inc_symbol">Include Symbols</string>
    <string name="no_similiar">No Similar Characters</string>
    <string name="what" translatable="false">what</string>
    <string name="my_gmail" translatable="false">My Gmail</string>
    <string name="my_gettr" translatable="false">My Gettr</string>
    <string name="hint_password" translatable="false">Input your password</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="your_password">Your password</string>
    <string name="your_account">Your account</string>
    <string name="title">Title</string>
    <string name="txt_title">Title:</string>
    <string name="account">Account:</string>
    <string name="password">Password:</string>
    <string name="paste">Paste</string>
    <string name="action_search">Search</string>
    <string name="action_hive" translatable="false">Test😁</string>
    <string name="search_account">Search account</string>
    <string name="password_length">Length:</string>
    <string name="password_length_want">Password length</string>
    <string name="AUTH_ID_ANDROID" translatable="false">913446610683-1751jjj76blk1ai2hjjnqq8l90sqjd1v.apps.googleusercontent.com</string>
    <string name="AUTH_ID_WEB" translatable="false">913446610683-ds47a18rjrqpdtt7e9152of27vuu95r0.apps.googleusercontent.com</string>
    <string name="login">Login</string>
    <string name="password_required">Password required</string>
    <string name="yes">Yes</string>
    <string name="security_setting">Security Setting</string>
    <string name="login_password">Login Password</string>
    <string name="coco" translatable="false">CoCo...</string>
    <string name="about_and">About</string>
    <string name="about_spec">Initial password is empty.\n\nEncryption method switch fromBASE64/DES to MD5 will remove current password.\n\nSingle tap to copy you account name.\nLong press to copy your account password.\nDouble tap to edit your account.</string>
    <string name="menu_gallery">Gallery</string>
    <string name="local_time_wpg_ca">Local Time:(WPG, CA?!)</string>
    <string name="china_time_sh_cn">China Time:(SH, CN)</string>

</resources>