<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/theme_selection">
        <ListPreference
            android:defaultValue="Default"
            android:entries="@array/theme_setting"
            android:entryValues="@array/theme_setting"
            android:key="setting_theme"
            android:title="@string/theme_list" />
    </PreferenceCategory>

    <PreferenceCategory
        android:scrollbarSize="?android:attr/scrollbarSize"
        app:title="@string/menu_pass_generator">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="setting_pass_number"
            android:title="@string/inc_num" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="setting_pass_lower"
            android:title="@string/inc_lower" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="setting_pass_upper"
            android:title="@string/inc_upper" />


        <CheckBoxPreference
            android:defaultValue="false"
            android:key="setting_pass_begin"
            android:title="@string/letter_begin" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="setting_pass_symbol"
            android:title="@string/inc_symbol"
            app:summaryOff="@string/pass_without_symbbols"
            app:summaryOn="@string/pass_with_symbbols" />


        <CheckBoxPreference
            android:defaultValue="false"
            android:key="setting_pass_similar"
            android:title="@string/no_similiar"
            app:summary="@string/pass_similiar" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="setting_pass_duplicate"
            android:title="@string/no_duplicate" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="setting_pass_seq"
            android:title="@string/no_sequential" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/security_setting">
        <ListPreference
            android:defaultValue="MD5"
            android:entries="@array/encrypt_setting"
            android:entryValues="@array/encrypt_setting"
            android:key="setting_encrypt"
            android:title="@string/encrypt_list" />

        <EditTextPreference
            android:key="setting_login_pw"
            android:title="@string/login_password"
            android:persistent="true"
            android:inputType="textWebPassword"
            android:dialogTitle="@string/login_password"
            android:defaultValue="" />

    </PreferenceCategory>

</PreferenceScreen>