<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:paddingHorizontal="24dp"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textViewA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_title" />
            <EditText
                android:id="@+id/edtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
                android:inputType="textPersonName"
                android:hint="@string/title" />

            <!--    name-->
            <TextView
                android:id="@+id/textViewB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
                android:inputType="textPersonName"
                android:hint="@string/your_account" />

            <!--    password length-->
            <TextView
                android:id="@+id/textViewB__"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_length" />

            <EditText
                android:id="@+id/edtPassLen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
                android:inputType="textPersonName"
                android:hint="@string/password_length_want" />

            <!-- password -->
            <TextView
                android:id="@+id/textViewC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/edtPass"

                android:maxLines="4"
                android:scrollbars="none"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
                android:inputType="textMultiLine"
                android:hint="@string/your_password" />

            <!-- generate button -->
            <Button
                android:id="@+id/paste"
                android:layout_width="match_parent"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:text="@string/generate"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0dp"
                android:background="@drawable/pass_gen_btn_shape"
                android:ellipsize="end"
                android:singleLine="true" />


            <!--    buttons-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel"
                    android:text="@string/cancel"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="0dp"
                    android:background="@drawable/pass_gen_btn_shape"
                    android:ellipsize="end"
                    android:singleLine="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/save"
                    tools:layout_editor_absoluteY="0dp" />

                <Button
                    android:id="@+id/save"
                    android:text="@string/save"

                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="0dp"
                    android:background="@drawable/pass_gen_btn_shape"
                    android:ellipsize="end"
                    android:singleLine="true"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cancel"
                    tools:layout_editor_absoluteY="0dp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
